--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "robofriends",
   "version": "0.1.0",
+  "homepage": "https://manjeet2910.github.io/roboFriends/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,6 +13,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "pre-deploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
